force-app/main/default/objects/Patient_Case__c/Patient_Case__c.object-meta.xml
<CustomObject>
    <label>Patient Case</label>
    <pluralLabel>Patient Cases</pluralLabel>
    <nameField>
        <displayFormat>PC-{00000}</displayFormat>
        <label>Patient Case Number</label>
        <startingNumber>1</startingNumber>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>