force-app/main/default/objects/Patient_Case__c/fields/Assigned_PSR__c.field-meta.xml
<CustomField>
    <fullName>Assigned_PSR__c</fullName><label>Assigned PSR</label><type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Patient Cases</relationshipLabel>
    <relationshipName>Patient_Cases</relationshipName>
</CustomField>