force-app/main/default/objects/Patient_Case__c/fields/CareProgram__c.field-meta.xml
<CustomField>
    <fullName>CareProgram__c</fullName><label>Care Program</label><type>Lookup</type>
    <referenceTo>CareProgram</referenceTo>
    <relationshipLabel>Patient Cases</relationshipLabel>
    <relationshipName>Patient_Cases</relationshipName>
</CustomField>