force-app/main/default/objects/Patient_Case__c/fields/Case_Notes__c.field-meta.xml
<CustomField>
    <fullName>Case_Notes__c</fullName><label>Case Notes</label><type>LongTextArea</type>
    <length>32768</length><visibleLines>5</visibleLines>
</CustomField>