force-app/main/default/objects/Patient_Case__c/fields/Case_Status__c.field-meta.xml
<CustomField>
    <fullName>Case_Status__c</fullName><label>Case Status</label><type>Picklist</type>
    <valueSet><valueSetDefinition><sorted>false</sorted>
        <value><fullName>New</fullName><default>true</default><label>New</label></value>
        <value><fullName>In Progress</fullName><default>false</default><label>In Progress</label></value>
        <value><fullName>Pending Patient</fullName><default>false</default><label>Pending Patient</label></value>
        <value><fullName>Escalated</fullName><default>false</default><label>Escalated</label></value>
        <value><fullName>Closed</fullName><default>false</default><label>Closed</label></value>
    </valueSetDefinition></valueSet>
</CustomField>