force-app/main/default/objects/Patient_Case__c/fields/Drug__c.field-meta.xml
<CustomField>
    <fullName>Drug__c</fullName><label>Drug</label><type>Lookup</type>
    <referenceTo>Drug__c</referenceTo>
    <relationshipName>PC_Drug</relationshipName>
    <relationshipLabel>Patient Cases</relationshipLabel>
</CustomField>