force-app/main/default/objects/Patient_Case__c/fields/Enrollee__c.field-meta.xml
<CustomField>
    <fullName>Enrollee__c</fullName><label>Enrollee</label><type>Lookup</type>
    <referenceTo>CareProgramEnrollee</referenceTo>
    <relationshipLabel>Patient Cases</relationshipLabel>
    <relationshipName>Patient_Cases</relationshipName><required>true</required>
</CustomField>