force-app/main/default/objects/Patient_Case__c/fields/Escalation_Tier__c.field-meta.xml
<CustomField>
    <fullName>Escalation_Tier__c</fullName><label>Escalation Tier</label><type>Picklist</type>
    <valueSet><valueSetDefinition><sorted>false</sorted>
        <value><fullName>PSR</fullName><default>true</default><label>PSR</label></value>
        <value><fullName>Senior PSR</fullName><default>false</default><label>Senior PSR</label></value>
        <value><fullName>Nurse</fullName><default>false</default><label>Nurse</label></value>
        <value><fullName>Medical Director</fullName><default>false</default><label>Medical Director</label></value>
    </valueSetDefinition></valueSet>
</CustomField>