force-app/main/default/objects/Patient_Case__c/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName><label>Priority</label><type>Picklist</type>
    <valueSet><valueSetDefinition><sorted>false</sorted>
        <value><fullName>High</fullName><default>false</default><label>High</label></value>
        <value><fullName>Medium</fullName><default>true</default><label>Medium</label></value>
        <value><fullName>Low</fullName><default>false</default><label>Low</label></value>
    </valueSetDefinition></valueSet>
</CustomField>