force-app/main/default/objects/Patient_Case__c/fields/SLA_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>SLA_Due_Date__c</fullName><label>SLA Due Date</label><type>DateTime</type>
</CustomField>